# spends

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT.md  Dockerfile.frontend  LICENSE  README.md  ROLLBACK_SUMMARY.md  SECURITY.md  VERIFICATION_CHECKLIST.md  diagram.md  nginx.conf  package-lock.json  package.json  vite.config.js
backend/: .dockerignore  .env.docker  .env.example  .env.production  DEPLOYMENT.md  Dockerfile  PROGRESS.MD  README.md  alembic.ini  create_migration.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run_server.py  spends_tracker.db
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_create_settings_table.py  002_add_retailer_order_number.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  brand.py  file.py  purchase.py  retailer.py  setting.py  warranty.py
backend/app/routes/: __init__.py  analytics.py  brands.py  data.py  exports.py  files.py  imports.py  purchases.py  retailers.py  settings.py  warranties.py
backend/app/schemas/: __init__.py  analytics.py  brand.py  common.py  file.py  purchase.py  retailer.py  warranty.py
backend/app/services/: __init__.py  analytics_service.py  brand_service.py  file_service.py  purchase_service.py  retailer_service.py  warranty_service.py
backend/app/templates/: base.html  (+3 more)
backend/migrations/: env.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_analytics.py  test_purchases.py
(+55 files in other folders)
